# smallterm

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  config.h  miniterm.c  miniterm.desktop  run-clang-format.sh
src/: CMakeLists.txt  config.h  miniterm.c  settings.c  settings.h  terminal.c  terminal.h
